# sanic_template

./: .eslintrc.js  .gitignore  .pylintrc  alembic.ini  cli.py  mypy.ini  pyproject.toml
changeme/: conf.py  server.py  shortcuts.py
changeme/blog/: api.py  models.py  rest.py  serializers.py  views.py
changeme/home/: forms.py  views.py
changeme/templates/: index.html  layout.html  main.js  tailwind.css  vite.config.js
changeme/templates/blog/: editor.html  editor.js  editor2.html  index.html
changeme/templates/blog/src/components/: Editor.vue
changeme/templates/blog/src/pages/: Index.vue
changeme/templates/components/: navbar.html  test.html
changeme/utils/: http.py  icons.py  templates.py
db/: common.py  nosync.py  sync.py  utils.py
migrations/: env.py
