[tool.poetry]
name = "changeme"
version = "0.1.0"
description = ""
authors = ["nuxion <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^21.6.2"
sanic-openapi = "^21.6.1"
Jinja2 = "^3.0.1"
WTForms = "^2.3.3"
SQLAlchemy = "1.4.22"
psycopg2-binary = "^2.9.1"
SQLAlchemy-serializer = "^1.4.1"
alembic = "^1.6.5"
pytz = "^2021.1"
asyncpg = "^0.24.0"
python-slugify = "^5.0.2"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.26.0"
sqlalchemy-stubs = "^0.4"
pylint = "^2.10.2"
isort = "^5.9.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
